--- a/bea/bea.html
+++ b/bea/bea.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Travelling Salesman Problem - Simulated Annealing</title>
-    <link rel="stylesheet" type="text/css" href="./main.css" />
+    <title>Bacterial Evolutionary Algorithm - Travelling Salesman Problem</title>
+    <link rel="stylesheet" type="text/css" href="../algorithm.css" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,bold' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
-    <div id="boxes">
+    <div id="boxes">       
+        <div class="wrapper">
+            <div class="title">
+                Bacterial Evolutionary Algorithm
+            </div>
+            <div class="right-menu">
+                <button class="menu-button">Menu</button>
+                <div class="dropdown-menu">
+                    <a href="../tsp.html">Home</a>
+                    <a href="../sa/sa.html">Simulated Annealing Algorithm</a>
+                    <a href="../ga/ga.html">Genetic Algorithm</a>
+                    <a href="../dbmea/dbmea.html">Discrete Bacterial Memetic Evolutionary Algorithm</a>
+                </div>
+            </div>
+        </div>
         <h3>Parameters:</h3>
         <div id="settings">
             <table>
@@ -60,9 +74,11 @@
         </canvas>
         <h3>Algorithm output:</h3>
         <div id="log-box"></div>
-
+        <div>
+            <button id="download-btn">Download output</button>
+        </div>
     </div>
-    <script src="tsp.js">
+    <script src="bea.js">
     </script>
 </body>
 </html>
