--- a/dbmea/dbmea.html
+++ b/dbmea/dbmea.html
@@ -19,6 +19,7 @@
                     <a href="../tsp.html">Home</a>
                     <a href="../sa/sa.html">Simulated Annealing Algorithm</a>
                     <a href="../ga/ga.html">Genetic Algorithm</a>
+                    <a href="../gaWasm/gaWasm.html">Genetic Algorithm With WebAssembly</a>
                     <a href="../bea/bea.html">Bacterial Evolutionary Algorithm</a>
                 </div>
             </div>
