--- a/ga/ga.html
+++ b/ga/ga.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Genetic Algorithm- Travelling Salesman Problem</title>
+    <title>Genetic Algorithm - Travelling Salesman Problem</title>
     <link rel="stylesheet" type="text/css" href="../algorithm.css" />
     <link href='https://fonts.googleapis.com/css?family=Lato:400,bold' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
@@ -18,6 +18,7 @@
                 <div class="dropdown-menu">
                     <a href="../tsp.html">Home</a>
                     <a href="../sa/sa.html">Simulated Annealing Algorithm</a>
+                    <a href="../gaWasm/gaWasm.html">Genetic Algorithm With WebAssembly</a>
                     <a href="../bea/bea.html">Bacterial Evolutionary Algorithm</a>
                     <a href="../dbmea/dbmea.html">Discrete Bacterial Memetic Evolutionary Algorithm</a>
                 </div>
