--- a/sa/sa.html
+++ b/sa/sa.html
@@ -18,6 +18,7 @@
                 <div class="dropdown-menu">
                     <a href="../tsp.html">Home</a>
                     <a href="../ga/ga.html">Genetic Algorithm</a>
+                    <a href="../gaWasm/gaWasm.html">Genetic Algorithm With WebAssembly</a>
                     <a href="../bea/bea.html">Bacterial Evolutionary Algorithm</a>
                     <a href="../dbmea/dbmea.html">Discrete Bacterial Memetic Evolutionary Algorithm</a>
                 </div>
