--- a/tsp.html
+++ b/tsp.html
@@ -16,8 +16,9 @@
         <div class="options">
             <button id="option1">Simulated Annealing Algorithm</button>
             <button id="option2">Genetic Algorithm</button>
-            <button id="option3">Bacterial Evolutionary Algorithm</button>
-            <button id="option4">Discrete Bacterial Memetic Evolutionary Algorithm</button>
+            <button id="option3">Genetic Algorithm With WebAssembly</button>
+            <button id="option4">Bacterial Evolutionary Algorithm</button>
+            <button id="option5">Discrete Bacterial Memetic Evolutionary Algorithm</button>
         </div>
     </div>
 
