--- a/bea/bea.html
+++ b/bea/bea.html
@@ -31,13 +31,13 @@
                     <tr>
                         <td>Cities</td>
                         <td>
-                            <input type="number" id="cities" min="1" max="73" value="73">
+                            <input type="number" id="cities" min="2" max="73" value="73">
                         </td>
                     </tr>
                     <tr>
                         <td>Number of generations</td>
                         <td>
-                            <input type="number" id="generations" value="600" />
+                            <input type="number" id="generations" value="4000" />
                         </td>
                     </tr>
                     <tr>
@@ -55,7 +55,19 @@
                     <tr>
                         <td>Number of infections in the gene transfer operation</td>
                         <td>
-                            <input type="number" id="infections" value="500" />
+                            <input type="number" id="infections" value="4" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Bacterial mutation segment length</td>
+                        <td>
+                            <input type="number" id="mutateSegmentLength" value="4" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Transferred segment length during gene transfer</td>
+                        <td>
+                            <input type="number" id="transferSegmentLength" value="35" />
                         </td>
                     </tr>
                 </tbody>
