--- a/dbmea/dbmea.html
+++ b/dbmea/dbmea.html
@@ -31,31 +31,43 @@
                     <tr>
                         <td>Cities</td>
                         <td>
-                            <input type="number" id="cities" min="1" max="173" value="73">
+                            <input type="number" id="cities" min="4" max="73" value="73">
                         </td>
                     </tr>
                     <tr>
                         <td>Number of generations</td>
                         <td>
-                            <input type="number" id="generations" value="5" />
+                            <input type="number" id="generations" value="10" />
                         </td>
                     </tr>
                     <tr>
                         <td>Size of the population (number of bacteria in the population)</td>
                         <td>
-                            <input type="number" id="popsize" value="3" />
+                            <input type="number" id="popsize" value="10" />
                         </td>
                     </tr>
                     <tr>
                         <td>Number of clones in the bacterial mutation</td>
                         <td>
-                            <input type="number" id="clones" value="5" />
+                            <input type="number" id="clones" value="3" />
                         </td>
                     </tr>
                     <tr>
                         <td>Number of infections in the gene transfer operation</td>
                         <td>
-                            <input type="number" id="infections" value="3" />
+                            <input type="number" id="infections" value="4" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Bacterial mutation segment length</td>
+                        <td>
+                            <input type="number" id="mutateSegmentLength" value="4" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Transferred segment length during gene transfer</td>
+                        <td>
+                            <input type="number" id="transferSegmentLength" value="35" />
                         </td>
                     </tr>
                 </tbody>
