--- a/gaWasm/gaWasm.html
+++ b/gaWasm/gaWasm.html
@@ -110,7 +110,7 @@
             <p id="bestcost">Best Cost: </p>
             <p id="runtime">Runtime: </p>
             <div id="buttons" style="margin: 15px auto; width: 100px;">
-                <button id="solve" onclick="run_wasm()">Solve</button>
+                <button id="solve">Solve</button>
             </div>
         </div>
         <canvas id="tsp-canvas" width="700" height="600">
