--- a/bea/bea.html
+++ b/bea/bea.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
-    <div id="boxes">       
+    <div id="boxes">
         <div class="wrapper">
             <div class="title">
                 Bacterial Evolutionary Algorithm
@@ -91,7 +91,10 @@
             <button id="download-btn">Download output</button>
         </div>
     </div>
-    <script src="bea.js">
-    </script>
+    <script src="bea.js"></script>
+    <script src="../HelperFunctions/print.js"></script>
+    <script src="../HelperFunctions/eventListeners.js"></script>
+    <script src="../HelperFunctions/initialize.js"></script>
+    <script src="../HelperFunctions/objective.js"></script>
 </body>
 </html>
