--- a/ga/ga.html
+++ b/ga/ga.html
@@ -79,7 +79,10 @@
             <button id="download-btn">Download output</button>
         </div>
     </div>
-    <script src="ga.js">
-    </script>
+    <script src="ga.js"></script>
+    <script src="../HelperFunctions/print.js"></script>
+    <script src="../HelperFunctions/eventListeners.js"></script>
+    <script src="../HelperFunctions/initialize.js"></script>
+    <script src="../HelperFunctions/objective.js"></script>
 </body>
 </html>
