--- a/sa/sa.html
+++ b/sa/sa.html
@@ -74,7 +74,10 @@
         </div>
     </div>
 
-    <script src="sa.js">        
-    </script>
+    <script src="sa.js"></script>
+    <script src="../HelperFunctions/print.js"></script>
+    <script src="../HelperFunctions/eventListeners.js"></script>
+    <script src="../HelperFunctions/initialize.js"></script>
+    <script src="../HelperFunctions/objective.js"></script>
 </body>
 </html>
