--- a/tsp.html
+++ b/tsp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Select Algorithm</title>
     <link rel="stylesheet" type="text/css" href="tsp.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <header>
