--- a/sa/sa.html
+++ b/sa/sa.html
@@ -61,7 +61,7 @@
             <label for="genOutput">Show every step in algorithm output</label>
             <div id="buttons" style="margin: 15px auto; width: 100px;">
                 <button id="solve">Solve</button>
-                <button id="stop">Stop</button>
+                <button id="stop" disabled>Stop</button>
             </div>
         </div>
         <canvas id="tsp-canvas" width="700" height="600">
